RESOLVED FIXED109536
Background size width specified in viewport percentage units not working
https://bugs.webkit.org/show_bug.cgi?id=109536
Summary Background size width specified in viewport percentage units not working
Uday Kiran
Reported 2013-02-11 19:05:15 PST
<div style="width: 50vw; height: 300px; background: url('resources/flower.jpg') top left / 25vw 300px repeat-x"></div>
Attachments
Patch (3.71 KB, patch)
2013-02-11 19:07 PST, Uday Kiran
no flags
Updated patch (3.99 KB, patch)
2013-02-12 10:49 PST, Uday Kiran
no flags
Uday Kiran
Comment 1 2013-02-11 19:07:35 PST
Uday Kiran
Comment 2 2013-02-12 10:49:10 PST
Created attachment 187895 [details] Updated patch Fixed missing </p> in test.
WebKit Review Bot
Comment 3 2013-02-12 11:15:34 PST
Comment on attachment 187895 [details] Updated patch Clearing flags on attachment: 187895 Committed r142645: <http://trac.webkit.org/changeset/142645>
WebKit Review Bot
Comment 4 2013-02-12 11:15:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.