Background size width specified in viewport percentage units not working https://bugs.webkit.org/show_bug.cgi?id=109536

Patch by Uday Kiran <udaykiran@motorola.com> on 2013-02-12
Reviewed by Antti Koivisto.

Source/WebCore:

Corrected the check for viewport percentage unit while calculating
background image width.

Test: fast/backgrounds/size/backgroundSize-viewportPercentage-width.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::calculateFillTileSize):

LayoutTests:

Added a test for background image width specified in viewport percentage unit.

* fast/backgrounds/size/backgroundSize-viewportPercentage-width-expected.html: Added.
* fast/backgrounds/size/backgroundSize-viewportPercentage-width.html: Added.

Canonical link: https://commits.webkit.org/127880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142645 268f45cc-cd09-0410-ab3c-d52691b4dbfc